make stream run

--- a/apps/bird-cam-ui/src/app/home/home.page.html
+++ b/apps/bird-cam-ui/src/app/home/home.page.html
@@ -1,6 +1,7 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>Birdcam</ion-title>
+    <ion-title>{{'app.title' | translate}}</ion-title>
+    <ion-progress-bar></ion-progress-bar>
   </ion-toolbar>
   <bird-cam-live-stream></bird-cam-live-stream>
 </ion-header>
