make comments work

--- a/apps/bird-cam-ui/src/app/home/home.page.html
+++ b/apps/bird-cam-ui/src/app/home/home.page.html
@@ -6,5 +6,7 @@
   <bird-cam-live-stream></bird-cam-live-stream>
 </ion-header>
 <ion-content>
-  <bird-cam-comments-preview></bird-cam-comments-preview>
+  <ion-card class="ion-margin-horizontal">
+    <bird-cam-comments-preview></bird-cam-comments-preview>
+  </ion-card>
 </ion-content>
