--- a/libs/comments/ui/src/lib/comments-create/comments-create.component.html
+++ b/libs/comments/ui/src/lib/comments-create/comments-create.component.html
@@ -4,7 +4,8 @@
         <ion-input #textInput
                    formControlName="text"
                    type="text"
-                   [placeholder]="'comments.addComment' | translate">
+                   [placeholder]="'comments.addComment' | translate"
+                >
         </ion-input>
         <ion-button *ngIf="profileForm.valid"
                     class="ion-no-padding"
