--- a/libs/comments/ui/src/lib/comments-preview/comments-preview.component.html
+++ b/libs/comments/ui/src/lib/comments-preview/comments-preview.component.html
@@ -1,9 +1,9 @@
-<ion-item detail="true" lines="none" (click)="openCommentsList()">
+<ion-item detail="true"
+          lines="none"
+          (click)="openCommentsList()">
     <ion-label>
-        <span>{{'comments.title' | translate}} </span>
-        <span>
-            ·
-        </span>
-        <!-- <ion-note>{{commentsCount$ | async}}</ion-note> -->
+        <h2>{{'comments.title' | translate}} <ion-note>{{commentsFacade.commentsCount$ | async}}</ion-note>
+        </h2>
+        <p>{{(commentsFacade.mostRecentComment$ | async)?.text}}</p>
     </ion-label>
 </ion-item>
