--- a/libs/live-stream/src/lib/ui/live-stream/live-stream.component.html
+++ b/libs/live-stream/src/lib/ui/live-stream/live-stream.component.html
@@ -1,5 +1,5 @@
 <video
-  class="block"
+  class="block w-full"
   id="video"
   (canplay)="canPlay()"
   [srcObject]="liveStreamService.stream$| async"
