make live stream run

--- a/libs/live-stream/ui/src/lib/live-stream.component.html
+++ b/libs/live-stream/ui/src/lib/live-stream.component.html
@@ -1,10 +1,11 @@
 <video
   class="block w-full"
   id="video"
+  [srcObject]="liveStreamFacade.stream$| async"
   (canplay)="canPlay()"
-  [srcObject]="liveStreamService.stream$| async"
   controls
   muted
   preload="auto"
   poster="./assets/img/streampreview.jpg"></video>
+
 
