--- a/apps/bird-cam-ui/src/app/home/home.page.html
+++ b/apps/bird-cam-ui/src/app/home/home.page.html
@@ -1,8 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>{{'app.title' | translate}}</ion-title>
-    <ion-progress-bar></ion-progress-bar>
+    <bird-cam-live-stream-progress-bar class="absolute bottom-0 left-0 right-0"></bird-cam-live-stream-progress-bar>
   </ion-toolbar>
+
   <bird-cam-live-stream></bird-cam-live-stream>
 </ion-header>
 <ion-content>
