--- a/libs/comments/ui/src/lib/comments-create/comments-create.component.html
+++ b/libs/comments/ui/src/lib/comments-create/comments-create.component.html
@@ -4,7 +4,7 @@
         <ion-input #textInput
                    formControlName="text"
                    type="text"
-                   [placeholder]="'comments.addComment' | translate"
+                   [placeholder]="'comments.addComment' | transloco "
                 >
         </ion-input>
         <ion-button *ngIf="profileForm.valid"
