--- a/libs/comments/ui/src/lib/comments-list/comments-list.component.html
+++ b/libs/comments/ui/src/lib/comments-list/comments-list.component.html
@@ -7,7 +7,7 @@
             </ion-button>
         </ion-buttons>
         <ion-title>
-            {{ 'comments.title' | translate }}
+            {{ 'comments.title' | transloco }}
         </ion-title>
     </ion-toolbar>
 </ion-header>
