--- a/libs/comments/ui/src/lib/comments-detail/comments-detail.component.html
+++ b/libs/comments/ui/src/lib/comments-detail/comments-detail.component.html
@@ -6,7 +6,7 @@
             <span>
                 · 
             </span>
-            <span>{{(comment.createdAt | relativeDate).key | translate: {count: (comment.createdAt |
+            <span>{{(comment.createdAt | relativeDate).key | transloco : {count: (comment.createdAt |
                 relativeDate).value} }}
             </span>
         </p>
