add active viewers

--- a/apps/bird-cam-ui/src/app/home/home.page.html
+++ b/apps/bird-cam-ui/src/app/home/home.page.html
@@ -8,6 +8,9 @@
 </ion-header>
 <ion-content>
   <ion-card class="ion-margin-horizontal">
+    <bird-cam-active-viewers></bird-cam-active-viewers>
+  </ion-card>
+  <ion-card class="ion-margin-horizontal">
     <bird-cam-comments-preview></bird-cam-comments-preview>
   </ion-card>
 </ion-content>
