--- a/apps/bird-cam-ui/src/app/home/home.page.html
+++ b/apps/bird-cam-ui/src/app/home/home.page.html
@@ -18,6 +18,7 @@
 <ion-content>
   <ion-card class="ion-margin-horizontal">
     <bird-cam-active-viewers></bird-cam-active-viewers>
+    <bird-cam-motion-notifier-button></bird-cam-motion-notifier-button>
   </ion-card>
   <ion-card class="ion-margin-horizontal">
     <bird-cam-comments-preview></bird-cam-comments-preview>
