--- a/apps/bird-cam-ui/src/app/home/home.page.html
+++ b/apps/bird-cam-ui/src/app/home/home.page.html
@@ -9,6 +9,9 @@
           }}</span>
       </div>
     </ion-title>
+    <ion-buttons slot="end">
+      <bird-cam-push-subscriber-button></bird-cam-push-subscriber-button>
+    </ion-buttons>
 
     <bird-cam-live-stream-progress-bar class="absolute bottom-0 left-0 right-0"></bird-cam-live-stream-progress-bar>
   </ion-toolbar>
@@ -18,7 +21,7 @@
 <ion-content>
   <ion-card class="ion-margin-horizontal">
     <bird-cam-active-viewers></bird-cam-active-viewers>
-    <bird-cam-push-subscriber-button></bird-cam-push-subscriber-button>
+
   </ion-card>
   <ion-card class="ion-margin-horizontal">
     <bird-cam-comments-preview></bird-cam-comments-preview>
