--- a/apps/bird-cam-ui/src/app/home/home.page.html
+++ b/apps/bird-cam-ui/src/app/home/home.page.html
@@ -2,26 +2,27 @@
   <ion-toolbar>
     <ion-title>
       <div class="flex flex-row items-center">
-        <ion-img class="h-5 mr-1"
-                 alt="Birdcam Logo"
-                 src="assets/icon/favicon.png" />
-        <span>{{'app.title' | transloco
-          }}</span>
+        <ion-img
+          class="h-5 mr-1"
+          alt="Birdcam Logo"
+          src="assets/icon/favicon.png"
+        />
+        <span>{{'app.title' | transloco }}</span>
       </div>
     </ion-title>
     <ion-buttons slot="end">
       <bird-cam-push-subscriber-button></bird-cam-push-subscriber-button>
     </ion-buttons>
 
-    <bird-cam-live-stream-progress-bar class="absolute bottom-0 left-0 right-0"></bird-cam-live-stream-progress-bar>
+    <bird-cam-live-stream-progress-bar
+      class="absolute bottom-0 left-0 right-0"
+    ></bird-cam-live-stream-progress-bar>
   </ion-toolbar>
-
-  <bird-cam-live-stream></bird-cam-live-stream>
 </ion-header>
 <ion-content>
+  <bird-cam-live-stream></bird-cam-live-stream>
   <ion-card class="ion-margin-horizontal">
     <bird-cam-active-viewers></bird-cam-active-viewers>
-
   </ion-card>
   <ion-card class="ion-margin-horizontal">
     <bird-cam-comments-preview></bird-cam-comments-preview>
