--- a/libs/live-stream/ui/src/lib/live-stream.component.html
+++ b/libs/live-stream/ui/src/lib/live-stream.component.html
@@ -1,9 +1,14 @@
-<video #video
-       class="block w-full"
-       id="video"
-       [srcObject]="liveStreamFacade.stream$| async"
-       (canplay)="canPlay()"
-       controls
-       muted
-       preload="auto"
-       poster="./assets/img/streampreview.jpg"></video>
+<video
+  #video
+  class="block w-full"
+  id="video"
+  [srcObject]="liveStreamFacade.stream$ | async"
+  (canplay)="canPlay()"
+  (pause)="liveStreamFacade.stopStream()"
+  (play)="liveStreamFacade.startStream()"
+  controls
+  muted
+  autoplay
+  preload="auto"
+  poster="./assets/img/streampreview.jpg"
+></video>
