--- a/libs/active-viewers/ui/src/lib/active-viewers/active-viewers.component.html
+++ b/libs/active-viewers/ui/src/lib/active-viewers/active-viewers.component.html
@@ -1,6 +1,12 @@
 <ion-item lines="none">
-    <ion-label>
-        <ion-note>{{'activeViewers.activeViewers' | transloco: {count: (activeViewersService.activeViewers$|
-            async)?.activeViewers} }}</ion-note>
-    </ion-label>
+  <ion-label>
+    {{
+      'activeViewers.activeViewers'
+        | transloco
+          : {
+              count: (activeViewersService.activeViewers$ | async)
+                ?.activeViewers
+            }
+    }}
+  </ion-label>
 </ion-item>
