--- a/apps/bird-cam-ui/src/app/home/home.page.html
+++ b/apps/bird-cam-ui/src/app/home/home.page.html
@@ -27,4 +27,7 @@
   <ion-card class="ion-margin-horizontal">
     <bird-cam-comments-preview></bird-cam-comments-preview>
   </ion-card>
+  <ion-card class="ion-margin-horizontal">
+    <bird-cam-motion-activity></bird-cam-motion-activity>
+  </ion-card>
 </ion-content>
