add view activity

--- a/apps/bird-cam-ui/src/app/home/home.page.html
+++ b/apps/bird-cam-ui/src/app/home/home.page.html
@@ -30,4 +30,7 @@
   <ion-card class="ion-margin-horizontal">
     <bird-cam-motion-activity></bird-cam-motion-activity>
   </ion-card>
+  <ion-card class="ion-margin-horizontal">
+    <bird-cam-viewer-history></bird-cam-viewer-history>
+  </ion-card>
 </ion-content>
