--- a/libs/active-viewers/ui/src/lib/active-viewers/active-viewers.component.html
+++ b/libs/active-viewers/ui/src/lib/active-viewers/active-viewers.component.html
@@ -1,4 +1,4 @@
-<ion-item lines="none">
+<ion-item lines="none" detail="true" (click)="openCommentsList()">
   <ion-label>
     {{
       'activeViewers.activeViewers'
