--- a/apps/bird-cam-ui/src/app/home/home.page.html
+++ b/apps/bird-cam-ui/src/app/home/home.page.html
@@ -30,7 +30,5 @@
   <ion-card class="ion-margin-horizontal">
     <bird-cam-motion-activity></bird-cam-motion-activity>
   </ion-card>
-  <ion-card class="ion-margin-horizontal">
-    <bird-cam-viewer-history></bird-cam-viewer-history>
-  </ion-card>
+  <bird-cam-recent-snapshots-slider></bird-cam-recent-snapshots-slider>
 </ion-content>
