--- a/libs/active-viewers/ui/src/lib/viewer-history/viewer-history.component.html
+++ b/libs/active-viewers/ui/src/lib/viewer-history/viewer-history.component.html
@@ -1,15 +1,29 @@
-<ion-item>
-  <ion-label>
-    <h2>{{ 'activeViewers.history.title' | transloco }}</h2>
-    <div style="display: block">
-      <canvas
-        baseChart
-        [type]="'line'"
-        [data]="$any(lineChartData$ | async)"
-        [options]="lineChartOptions"
-        [legend]="false"
-      >
-      </canvas>
-    </div>
-  </ion-label>
-</ion-item>
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="end">
+      <ion-button (click)="modalController.dismiss()">
+        <ion-icon slot="icon-only" name="close"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title>
+      {{ 'activeViewers.history.title' | transloco }}
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+<ion-content>
+  <ion-item>
+    <ion-label>
+      <h2>{{ 'activeViewers.history.title' | transloco }}</h2>
+      <div style="display: block">
+        <canvas
+          baseChart
+          [type]="'line'"
+          [data]="$any(lineChartData$ | async)"
+          [options]="lineChartOptions"
+          [legend]="false"
+        >
+        </canvas>
+      </div>
+    </ion-label>
+  </ion-item>
+</ion-content>
