--- a/apps/bird-cam-ui/src/app/home/home.page.html
+++ b/apps/bird-cam-ui/src/app/home/home.page.html
@@ -31,4 +31,5 @@
     <bird-cam-motion-activity></bird-cam-motion-activity>
   </ion-card>
   <bird-cam-recent-snapshots-slider></bird-cam-recent-snapshots-slider>
+  <div class="mb-10"></div>
 </ion-content>
