--- a/libs/active-viewers/ui/src/lib/viewer-history/viewer-history.component.html
+++ b/libs/active-viewers/ui/src/lib/viewer-history/viewer-history.component.html
@@ -6,23 +6,26 @@
       </ion-button>
     </ion-buttons>
     <ion-title>
-      {{ 'activeViewers.history.title' | transloco }}
+      {{ 'activeViewers.viewer' | transloco }}
     </ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-item>
-    <ion-label>
-      <div style="display: block">
-        <canvas
-          baseChart
-          [type]="'line'"
-          [data]="$any(lineChartData$ | async)"
-          [options]="lineChartOptions"
-          [legend]="false"
-        >
-        </canvas>
-      </div>
-    </ion-label>
-  </ion-item>
+  <ion-list>
+    <ion-item>
+      <ion-label>
+        <h2>{{ 'activeViewers.history.title' | transloco }}</h2>
+      </ion-label>
+    </ion-item>
+    <div style="display: block">
+      <canvas
+        baseChart
+        [type]="'line'"
+        [data]="$any(lineChartData$ | async)"
+        [options]="lineChartOptions"
+        [legend]="false"
+      >
+      </canvas>
+    </div>
+  </ion-list>
 </ion-content>
