--- a/libs/motion-activity/ui/src/lib/motion-activity/motion-activity.component.html
+++ b/libs/motion-activity/ui/src/lib/motion-activity/motion-activity.component.html
@@ -1,19 +1,8 @@
-<ion-item detail="true" lines="none" (click)="openCommentsList()">
+<ion-item lines="none" detail="true" (click)="openDetails()">
   <ion-label>
-    <h2>{{ 'motionActivity.title' | transloco }}</h2>
+    <h2>{{ 'motionActivity.recentActivities' | transloco }}</h2>
   </ion-label>
 </ion-item>
-<ion-item>
-  <ion-label>
-    <div style="display: block">
-      <canvas
-        baseChart
-        [type]="'line'"
-        [data]="$any(lineChartData$ | async)"
-        [options]="lineChartOptions"
-        [legend]="false"
-      >
-      </canvas>
-    </div>
-  </ion-label>
-</ion-item>
+
+<bird-cam-recent-snapshots-slider></bird-cam-recent-snapshots-slider>
+<div class="ion-margin"></div>
