--- a/libs/active-viewers/ui/src/lib/viewer-history/viewer-history.component.html
+++ b/libs/active-viewers/ui/src/lib/viewer-history/viewer-history.component.html
@@ -17,7 +17,7 @@
         <h2>{{ 'activeViewers.history.title' | transloco }}</h2>
       </ion-label>
     </ion-item>
-    <div style="display: block">
+    <div style="display: block" class="ion-margin">
       <canvas
         baseChart
         [type]="'line'"
